--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,36 +39,39 @@ h3 {
 	border-bottom: dashed 2px #f2df98;
 	margin: 48px 0 32px;
 }
+
 h4 {
 	font-size: 1.1rem;
+	font-weight: 600;
+	color: #73613e;
 	margin: 48px 0 32px;
 }
 
-.blog-post > p {
+.blog-post>p {
 	margin: 16px 0;
 	line-height: 2.15rem;
 }
 
-.blog-post > p > code {
+.blog-post>p>code {
 	background: #fdf6e3;
 	padding: 4px 8px;
 	border-radius: 4px;
 	font-size: 1.0rem;
 }
 
-.blog-post > ul,
+.blog-post>ul,
 ol {
 	background: #eeeeee;
 	padding: 16px 16px;
 	font-size: 1.0rem;
 }
 
-.blog-post > ul {
+.blog-post>ul {
 	list-style-type: disc;
 	list-style-position: inside;
 }
 
-.blog-post > ul > li {
+.blog-post>ul>li {
 	margin: 8px 0;
 }
 
@@ -88,7 +91,7 @@ code {
 	border-radius: 4px;
 }
 
-pre > code {
+pre>code {
 	background: none;
 	padding: 0;
 }
